plugins {
    id 'java'
    id 'application'
    id 'maven-publish'
    id 'distribution'
    id "org.jetbrains.intellij" version "0.4.10"    /* https://github.com/JetBrains/gradle-intellij-plugin */
    id "org.jetbrains.grammarkit" version "2019.3"  /* https://github.com/JetBrains/gradle-grammar-kit-plugin */
}

repositories {
    mavenLocal()
    maven {
        url = 'http://maven.aliyun.com/nexus/content/groups/public'
    }

    maven {
        url = 'http://repo.maven.apache.org/maven2'
    }
}

ext {
    javaparser_version = "3.15.2"
    javapoet_version = "1.11.1"
    idea_version='2019.2.3'
}

dependencies {

    implementation "com.github.javaparser:javaparser-core-serialization:${javaparser_version}"
    implementation "com.github.javaparser:javaparser-core:${javaparser_version}"
    implementation "com.github.javaparser:javaparser-symbol-solver-core:${javaparser_version}"
    implementation "com.squareup:javapoet:${javapoet_version}"

}

group = 'rok'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
ext.moduleName = 'rok-core'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}


compileJava {
    doFirst {
        options.compilerArgs = [
                '--enable-preview',
                '--module-path', classpath.asPath,
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        ]
        classpath = files()
    }
}


intellij {

    pluginName = 'rok'
    type = 'IC'
    version = "IC-${idea_version}"
    sandboxDirectory = "/Volumes/To/dev/idea-sandbox/idea-rok-${idea_version}"

}